Switching to Groovy Gradle